--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "zod": "^3.22.4",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
